# cartes

./: .flake8  .gitignore  .pre-commit-config.yaml  cartes.code-workspace  conftest.py  justfile  license.txt  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: build-docs.yml  github-pages.yml  pypi-publish.yml  run-tests.yml
cartes/: __init__.py  __main__.py  conftest.py  core.py
cartes/atlas/: __init__.py  topo.py
cartes/crs/: __init__.py  info.py  meta.py
cartes/dataviz/: __init__.py  matplotlib_style.json
cartes/dataviz/markers/: __init__.py  atc_tower.json  helicopter.json  windsock.json
cartes/osm/: __init__.py  nominatim.py  overpass.py  requests.py
cartes/osm/overpass/: __init__.py  core.py  meta.py  query.py
cartes/osm/overpass/relations/: __init__.py  boundary.py  multipolygon.py  waterway.py
cartes/tests/: test_multipolygon.py  test_nominatim.py  test_overpass.py
cartes/utils/: cache.py  descriptors.py  features.py  geoaxes.py  geometry.py  mixins.py
docs/source/: altair.rst  alternatives.rst  atlas.rst  conf.py  gallery.rst  index.rst  installation.rst  osm.rst  projections.rst  troubleshooting.rst  visualisation.rst
docs/source/_static/: austria.json  capri.html  crs_custom.html  crs_rome.html  downing_street.html  epsg_3034.html  epsg_6674.html  eyjafjallajokull.html  helsinki_parks.html  helsinki_parks_area.html  lambert93.html  main_stylesheet.css  riviera.json  simplify_cartes.json  simplify_naive.json
docs/source/_static/gallery/: bayern.json  bayern_wappen.json  capitals.json  mercantour.json  tokyo_central.json  tokyo_global.json
docs/source/_templates/: layout.html
docs/source/gallery/: airports.rst  bayern.rst  capitals.rst  footprint.rst  graph.rst  hongkong.rst  mercantour.rst  switzerland.rst  terminal.rst  tokyo_metro.rst
examples/: altair.ipynb  tiles.py
src/cartes/: __main__.py  core.py
src/cartes/atlas/: topo.py
src/cartes/crs/: __init__.py  info.py  meta.py  vega_params.py
src/cartes/dataviz/: __init__.py  matplotlib_style.json
src/cartes/dataviz/markers/: atc_tower.json  helicopter.json  windsock.json
src/cartes/osm/: __init__.py  nominatim.py  requests.py
src/cartes/osm/overpass/: __init__.py  core.py  meta.py  query.py
src/cartes/osm/overpass/relations/: __init__.py  boundary.py  multipolygon.py  site.py  waterway.py
src/cartes/tiles/: __init__.py  cached.py  cartocdn.py  fastapi.py
src/cartes/utils/: cache.py  features.py  geoaxes.py  geometry.py  mixins.py
tests/: conftest.py  test_crs.py  test_nominatim.py  test_overpass.py
