[metadata]
name = cartes
author = Xavier Olive
author_email = git@xoolive.org
version = 0.6
license_file = license.txt
url = https://github.com/xoolive/cartes/
project_urls =
    Documentation = https://cartes-viz.github.io/
    Code = https://github.com/xoolive/cartes/
    Issue tracker = https://github.com/xoolive/cartes/issues/
license = MIT
description = A generic toolbox for building maps in Python
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
packages = find:
python_requires = >= 3.7
install_requires = 
    matplotlib
    scipy  # missing dependency for cartopy
    pandas
    geopandas
    pyproj>=3.0
    requests
    Cartopy
    Shapely
    aiohttp
    appdirs  # proper configuration directories
    bs4  # beautifulsoup
    importlib_metadata  # should be unnecessary after py39?
    lxml
    tqdm

[options.package_data]
* = *.json
cartes =
    py.typed

[options.entry_points]
console_scripts =
    cartes = cartes.__main__:main


[flake8]
max-line-length = 80
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # No need to check that if you work on notebooks in the directory
    .ipynb_checkpoints,
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
ignore =
    # W503 line break before binary operator
    W503,
    # C901 too complex
    C901,
    # B010 setattr are often just necessary
    B010
per-file-ignores =
    # long lines in documentation
    cartes/osm/nominatim.py:E501
    cartes/utils/descriptors.py:E501
    cartes/utils/geometry.py:E501